Fixed alignment

--- a/src/components/css/WeatherNewsItem.css
+++ b/src/components/css/WeatherNewsItem.css
@@ -50,6 +50,8 @@
 .weatherIcon{
     width: 170px;
     margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
